--- a/src/modules/create-market/less/create-market-form.less
+++ b/src/modules/create-market/less/create-market-form.less
@@ -1,6 +1,7 @@
 .create-market-form {
   .border(true, @border-top);
 
+  margin: 1em 0;
   padding: 1em;
   transition-duration: @animation-speed-very-fast;
   transition-property: height;
