--- a/src/modules/create-market/less/create-market-main-title.less
+++ b/src/modules/create-market/less/create-market-main-title.less
@@ -2,6 +2,7 @@
   align-items: center;
   display: flex;
   flex: 1;
+  margin: 0 1em;
   position: relative;
 
   h1 {
