--- a/src/modules/create-market/less/create-market-preview.less
+++ b/src/modules/create-market/less/create-market-preview.less
@@ -1,4 +1,5 @@
 .create-market-preview {
+  margin: 0 1em;
   overflow: hidden;
   position: relative;
   transition-delay: 2s;
