--- a/src/modules/create-market/less/create-market.less
+++ b/src/modules/create-market/less/create-market.less
@@ -19,13 +19,5 @@
       overflow: hidden;
       padding: 0 1em;
     }
-
-    & > article {
-      margin: 1em;
-
-      &:last-of-type {
-        margin: 0;
-      }
-    }
   }
 }
